Fixed HomeaPage welcoming bg msg not visible

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,6 +135,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* -------------------------------------------------------------------- */
 
+.parallax-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5); /* Adjust the last value to make it darker or lighter */
+  z-index: 1;
+}
+
 .parallax-container {
     min-height: 380px;
     line-height: 0;
